# hamloghs

./: LICENSE.md  README.md  TODO.md  hamloghs.cabal  photorec.ses  stack.yaml
app/: hl-alltxt.hs  hl-export.hs  hl-filter.hs  hl-from-alltxt.hs  hl-from-csv.hs  hl-import.hs  hl-list.hs  hl-merge.hs  hl-record.hs  hl-to-adx.hs  hl-to-csv.hs  hl-to-fods.hs  hl-to-list.hs  hl-to-msoxml.hs
bash/: .hlrc
src/: HlAdif.hs  HlLog.hs  HlOptions.hs  Lib.hs
templates/: odftest.ods
