name:                hamloghs
version:             0.1.0.0
synopsis:            Ham radio log in Haskell
description:         Log contacts, search, import, export, edit data
homepage:            https://github.com/netom/hamloghs#readme
license:             BSD3
license-file:        LICENSE
author:              Fábián Tamás László
maintainer:          giganetom@gmail.com
copyright:           2016 Fábián Tamás László
category:            Amateur Radio
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HlAdif
                     , HlOptions
  build-depends:       base >= 4.7 && < 5
                     , text
                     , attoparsec
                     , optparse-applicative
                     , directory
                     , mtl
  default-language:    Haskell2010

executable hl-import
  hs-source-dirs:      app
  main-is:             hl-import.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hamloghs
  default-language:    Haskell2010

executable hl-export
  hs-source-dirs:      app
  main-is:             hl-export.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hamloghs
                     , optparse-applicative
                     , text
  default-language:    Haskell2010

executable hl-record
  hs-source-dirs:      app
  main-is:             hl-record.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hamloghs
  default-language:    Haskell2010

test-suite hamloghs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hamloghs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hamloghs
