name:                hamloghs
version:             0.2.0.0
synopsis:            Ham radio log in Haskell
description:         Log contacts, search, import, export, edit data
homepage:            https://github.com/netom/hamloghs#readme
license:             MIT
license-file:        LICENSE.md
author:              Fábián Tamás László
maintainer:          giganetom@gmail.com
copyright:           2016 Fábián Tamás László
category:            Amateur Radio
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     HlAdif
                     , HlOptions
                     , HlLog
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , utf8-string
                     , attoparsec
                     , optparse-applicative
                     , directory
                     , mtl
                     , split
                     , vector
                     , regex-base
                     , regex-tdfa
  default-language:    Haskell2010

executable hl-import
  hs-source-dirs:      app
  main-is:             hl-import.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hamloghs
                     , optparse-applicative
                     , bytestring
                     , temporary
                     , directory
  default-language:    Haskell2010

executable hl-export
  hs-source-dirs:      app
  main-is:             hl-export.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hamloghs
                     , optparse-applicative
                     , bytestring
  default-language:    Haskell2010

executable hl-record
  hs-source-dirs:      app
  main-is:             hl-record.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hamloghs
                     , optparse-applicative
                     , time
                     , bytestring
  default-language:    Haskell2010

executable hl-merge
  hs-source-dirs:      app
  main-is:             hl-merge.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hamloghs
                     , optparse-applicative
                     , bytestring
  default-language:    Haskell2010

executable hl-to-list
  hs-source-dirs:      app
  main-is:             hl-to-list.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hamloghs
                     , optparse-applicative
                     , bytestring
  default-language:    Haskell2010

executable hl-from-csv
  hs-source-dirs:      app
  main-is:             hl-from-csv.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hamloghs
                     , optparse-applicative
                     , bytestring
                     , stringsearch
                     , cassava
                     , attoparsec
                     , vector
  default-language:    Haskell2010

executable hl-to-csv
  hs-source-dirs:      app
  main-is:             hl-to-csv.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hamloghs
                     , optparse-applicative
                     , bytestring
                     , stringsearch
  default-language:    Haskell2010

executable hl-to-msoxml
  hs-source-dirs:      app
  main-is:             hl-to-msoxml.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hamloghs
                     , optparse-applicative
                     , bytestring
                     , stringsearch
  default-language:    Haskell2010

executable hl-to-fods
  hs-source-dirs:      app
  main-is:             hl-to-fods.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hamloghs
                     , optparse-applicative
                     , bytestring
                     , stringsearch
  default-language:    Haskell2010

executable hl-to-adx
  hs-source-dirs:      app
  main-is:             hl-to-adx.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hamloghs
                     , optparse-applicative
                     , bytestring
                     , stringsearch
  default-language:    Haskell2010

executable hl-filter
  hs-source-dirs:      app
  main-is:             hl-filter.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hamloghs
                     , optparse-applicative
                     , bytestring
                     , regex-tdfa
  default-language:    Haskell2010

test-suite hamloghs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hamloghs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hamloghs
